--- a/SpringBootRestApi/pom.xml
+++ b/SpringBootRestApi/pom.xml
@@ -8,7 +8,7 @@
 	</parent>  
   
 	<groupId>io.devsecops.api</groupId>
- 	<artifactId>restSpringBoot</artifactId>
+ 	<artifactId>SpringBootRestApi</artifactId>
  	<version>0.0.1-SNAPSHOT</version>
  	<packaging>jar</packaging>
 	
@@ -21,29 +21,52 @@
     </properties>
 
     <dependencies>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-rest</artifactId>
-      </dependency>
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-data-rest</artifactId>
+      	</dependency>
       
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
-      </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
       
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-      </dependency>
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-test</artifactId>
+        	<scope>test</scope>
+      	</dependency>
+
+		<dependency>
+        	<groupId>mysql</groupId>
+        	<artifactId>mysql-connector-java</artifactId>
+      	</dependency>
+      	
+		<dependency>
+        	<groupId>org.flywaydb</groupId>
+        	<artifactId>flyway-core</artifactId>
+      	</dependency>
+      
+      	<dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+      	</dependency>
+      	
+      	<dependency>
+		    <groupId>com.github.dozermapper</groupId>
+		    <artifactId>dozer-core</artifactId>
+    		<version>6.5.0</version>
+		</dependency>
     </dependencies>
 
     <build>
       <plugins>
+        
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
+       
       </plugins>
     </build>
 </project>
