--- a/SpringBootRestApi/src/main/resources/application.properties
+++ b/SpringBootRestApi/src/main/resources/application.properties
@@ -11,3 +11,5 @@ flyway.url=jdbc:mysql://192.168.99.104:3306/
 flyway.schemas=restSpringboot
 flyway.user=root
 flyway.password=!@P@ssw0rd
+
+spring.jackson.default-property-inclusion=non_null
