--- a/SpringBootRestApi/src/main/resources/application.properties
+++ b/SpringBootRestApi/src/main/resources/application.properties
@@ -13,3 +13,10 @@ flyway.user=root
 flyway.password=!@P@ssw0rd
 
 spring.jackson.default-property-inclusion=non_null
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+
+file.upload-dir=/home/luis/uploadDir
