--- a/SpringBootRestApi/src/main/resources/application.properties
+++ b/SpringBootRestApi/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.datasource.driveClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.99.104:3306/restSpringboot?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db:3306/restSpringboot?useTimezone=true&serverTimezone=UTC&SSL=false
 spring.datasource.username=root
-spring.datasource.password=!@P@ssw0rd
+spring.datasource.password=1q2w3e4r5t
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-flyway.url=jdbc:mysql://192.168.99.104:3306/
+flyway.url=jdbc:mysql://db:3306/
 flyway.schemas=restSpringboot
 flyway.user=root
-flyway.password=!@P@ssw0rd
+flyway.password=1q2w3e4r5t
 
 spring.jackson.default-property-inclusion=non_null
 
